# std_cout

./: .gitignore  CMakeLists.txt  README.md  basic_shared_CMakeLists.txt  std_coutConfig.cmake.in
example_std_cout/: CMakeLists.txt  fedora_version_error.md  std_cout_lib_files_from_ubuntu20.tar.xz
example_std_cout/src/: main.cpp
include/: std_cout.hpp  std_cout.tpp
script/: gether.sh  readme.md  std_cout_v1.0.2_ubuntu20.tar.xz  std_cout_v1.1.2_ubuntu20.tar.xz  std_cout_v1.2.3_ubuntu20.tar.xz
src/: std_cout.cpp
